--- a/main.css
+++ b/main.css
@@ -16,3 +16,14 @@
     color: white;
     text-shadow: 0 0 5px #000;
   }
+  .parallax::after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateZ(-1px) scale(1.5);
+    background-size: 100%;
+    z-index: -1;
+  }
