--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   perspective: 2px;
-  background:pink;
+  background: #cccccc;
   padding: 0;
 }
 .main-header {
@@ -22,7 +22,9 @@ body {
   font-weight: 700;
   background: #cccccc;
   margin: 0;
-  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .static-section { 
   color: black;
