--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
 html {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
+  background-color: #262626;
+  color: #d9d9d9;
 }
 body {
   padding: 0;
@@ -13,4 +15,18 @@ main {
   padding: 0;
   Margin: 0;
 }
-
+.content {
+  font-size: 1.5rem;
+  color: #262626;
+  background-size: 49% auto;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+.right {
+  padding: 1.618em 6.472em 3.236em 50%;
+  background-position: 0 50%;
+}
+.illustration_01 {
+  background-color: #00c17b;
+  background-image: url("https://picsum.photos/500/700");
+}
