--- a/main.css
+++ b/main.css
@@ -30,3 +30,11 @@ main {
   background-color: #00c17b;
   background-image: url("https://picsum.photos/500/700");
 }
+.left {
+  padding: 1.618em 50% 3.236em 6.472em;
+  background-position: 100% 50%;
+}
+.illustration_02 {
+  background-color: #e8697b;
+  background-image: url("https://picsum.photos/500/700");
+}
