--- a/main.css
+++ b/main.css
@@ -38,3 +38,8 @@ main {
   background-color: #e8697b;
   background-image: url("https://picsum.photos/500/700");
 }
+.separator {
+  font-size: 2rem;
+  padding: 1.5rem 0;
+  text-align: center;
+}
